<resources>
    <string name="app_name">ChatApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_app">Chat App</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="password">password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="name">name</string>
    <string name="sign_up">sign up</string>
    <string name="don_t_have_account">don\'t have account</string>
    <string name="loading">loading …</string>
    <string name="type_message_here">type message here</string>
    <string name="already_have_account">Already have account!</string>
    <string name="forget_password">Forget Password</string>
    <string name="chat">chat</string>
    <string name="more">more</string>
    <string name="people">people</string>
    <string name="chats">Chats</string>
</resources>